--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ html, body, #root {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background: #e3f0ff; /* light blue */
+  background: #1256a3; /* light blue */
   overflow-x: hidden;
 }
 
@@ -14,7 +14,7 @@ html, body, #root {
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(0, 0, 0, 0.87);
   background-color: #242424;
 
   font-synthesis: none;
